--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="menucontainer">
         <div class="main-title">
-            <img src="Pics/logo.png" alt="El TosTaco Regio Logo" class="logo" />
+            <img src="Pics/LOGO.png" alt="El TosTaco Regio Logo" class="logo" />
             <!-- <span class="logo-text">El TosTaco Regio</span> -->
 
         </div>
