📱 Fix mobile layout and add new images

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="menucardwrap">
                         <div class="menucard">
                             <div class="item-image-container">
-                                <img src="Pics/quesabirria.jpg" alt="quesabirria Tacos" class="item-image" />
+                                <img src="Pics/beefquesabirrias.jpg" alt="quesabirria Tacos" class="item-image" />
                             </div>
                             <div class="titlecontainer">
                                 <span class="item-title">Beef Quesabirria</span>
@@ -219,7 +219,7 @@
                     <div class="menucardwrap">
                         <div class="menucard">
                             <div class="item-image-container">
-                                <img src="Pics/burger.jpg" alt="Burger" class="item-image" />
+                                <img src="Pics/hamburger.jpg" alt="Burger" class="item-image" />
                             </div>
                             <div class="titlecontainer">
                                 <span class="item-title">Burger</span>
@@ -258,7 +258,7 @@
                     <div class="menucardwrap">
                         <div class="menucard">
                             <div class="item-image-container">
-                                <img src="Pics/empalmes.jpg" alt="Empalmes" class="item-image" />
+                                <img src="Pics/emplames.jpg" alt="Empalmes" class="item-image" />
                             </div>
                             <div class="titlecontainer">
                                 <span class="item-title">Empalmes</span>
@@ -303,10 +303,27 @@
                             </div>
                             <div class="info-row">
                                 <p class="item-description">
-                                    Loaded nachos with beans, cheese, pico de gallo, jalapeños, sour cream, avocado, and
-                                    your choice of meat: <em>beef birria, lamb birria, pastor, or bistec.</em>
+                                    Loaded nachos with beans, cheese, pico de gallo, jalapeños, sour cream, avocado.
                                 </p>
                                 <div class="item-price">$10</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="menucardwrap">
+                        <div class="menucard">
+                            <div class="item-image-container">
+                                <img src="Pics/nachos.jpeg" alt="Nachos" class="item-image" />
+                            </div>
+                            <div class="titlecontainer">
+                                <span class="item-title">Mexican Nachos W/Meat</span>
+                            </div>
+                            <div class="info-row">
+                                <p class="item-description">
+                                    Loaded nachos with beans, cheese, pico de gallo, jalapeños, sour cream, avocado.
+                                    <em>Choose your meat: beef birria, lamb birria, pastor, or bistec.</em>
+                                </p>
+                                <div class="item-price">$14</div>
                             </div>
                         </div>
                     </div>
@@ -379,61 +396,61 @@
                             <p class="item-description">
                                 A traditional Mexican drink made with rice, milk, cinnamon, and sugar.
                             </p>
-                            <div class="item-price">$4</div>
+                            <div class="item-price">$5</div>
                         </div>
                     </div>
                 </div>
 
-                <div class="menucardwrap">
-                    <div class="menucard">
-                        <div class="item-image-containeer">
-                            <img src="Pics/jamaica.jpg" alt="Jamaica" class="item-image" />
-                        </div>
-                        <div class="titlecontainer">
-                            <span class="item-title">Jamaica</span>
-                        </div>
-                        <div class="info-row">
-                            <p class="item-description">
-                                A refreshing drink made from dried hibiscus flowers, sugar, and water.
-                            </p>
-                            <div class="item-price">$4</div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="menucardwrap">
-                    <div class="menucard">
-                        <div class="item-image-containeer">
-                            <img src="Pics/lemonade.jpg" alt="Lemonade" class="item-image" />
-                        </div>
-                        <div class="titlecontainer">
-                            <span class="item-title">Lemonade</span>
-                        </div>
-                        <div class="info-row">
-                            <p class="item-description">
-                                Sweet and tart freshly made lemonade.
-                            </p>
-                            <div class="item-price">$4</div>
-                        </div>
+                <div class="menucard">
+                    <div class="item-image-containeer">
+                        <img src="Pics/jamaica.jpg" alt="Jamaica" class="item-image" />
                     </div>
-                </div>
-            </div>
-
-            <!-- Full-width Bottled Drinks Card -->
-            <div class="bottledcardwrap">
-                <div class="menucard fullwidth">
-                    <div class="titlecontainerd">
-                        <span class="item-title">Bottled & Canned Drinks</span>
+                    <div class="titlecontainer">
+                        <span class="item-title">Jamaica</span>
                     </div>
                     <div class="info-row">
                         <p class="item-description">
-                            Mexican Coca-Cola, canned Coca-Cola, and bottled water.
+                            A refreshing drink made from dried hibiscus flowers, sugar, and water.
                         </p>
-                        <div class="item-price">$3</div>
+                        <div class="item-price">$5</div>
+                    </div>
+                </div>
+
+
+
+                <div class="menucard">
+                    <div class="item-image-containeer">
+                        <img src="Pics/lemonade.jpg" alt="Lemonade" class="item-image" />
+                    </div>
+                    <div class="titlecontainer">
+                        <span class="item-title">Lemonade</span>
+                    </div>
+                    <div class="info-row">
+                        <p class="item-description">
+                            Sweet and tart freshly made lemonade.
+                        </p>
+                        <div class="item-price">$5</div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- Full-width Bottled Drinks Card -->
+        <div class="bottledcardwrap">
+            <div class="menucard fullwidth">
+                <div class="titlecontainerd">
+                    <span class="item-title">Bottled & Canned Drinks</span>
+                </div>
+                <div class="info-row">
+                    <p class="item-description">
+                        Mexican Coca-Cola <strong>$3.50</strong>, canned Cokes <strong>$2.50</strong>, and bottled
+                        water <strong>$1.50</strong>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
